# monogodbconnectorpkg

./: .env  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yml  python-publish.yaml
experiment/: experiments.ipynb
src/: mongodb-connect.py
